Fix annotation processing warnings
Introduced in #8286.